tests/golden/reject/erru_unhandled_bind_reject.goo
// erru_unhandled_bind_reject (P2.8 T4.3): `x := f()` where f() returns !int
// binds the raw error union with no try/catch/destructure — verified
// pre-fix, this compiled SILENTLY (no diagnostic at all), leaving every
// later use of `x` to fend for itself with no enforced unwrap. Now rejected
// at the binding, naming the three ways to handle it.
package main

func f(bad bool) !int {
	if bad {
		return error("boom")
	}
	return 1
}

func main() {
	x := f(false)
	_ = x
}
